--- a/web/src/app/product/product-manage/product-manage.component.html
+++ b/web/src/app/product/product-manage/product-manage.component.html
@@ -1,29 +1,27 @@
 <section class="content">
     <div class="container-fluid">
         <div class="block-header">
-            <div class="row">
-
-            </div>
+            <div class="row"></div>
         </div>
         <div class="row clearfix">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
-                    <p style="font-size: 20px; color: white">Loading...</p>
-                </ngx-spinner>
                 <div class="card">
                     <div class="header">
                         <h2>Product Master</h2>
-                        <ul class="header-dropdown m-r--5">
-                           
-                        </ul>
+                        <ul class="header-dropdown m-r--5"> </ul>
                     </div>
                     <div class="body">
-                        <form  #f="ngForm" autocomplete="off" >
+                        <form #f="ngForm" autocomplete="off">
                             <div class="row" *ngIf="!showAdd">
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Product</mat-label>
-                                        <mat-select name="selectedProduct" [(ngModel)]="selectedProduct"  required #Typecontrol appAutoFoucsDirectives>
+                                        <mat-select name="selectedProduct" [(ngModel)]="selectedProduct" required
+                                            (selectionChange)="getfieldList()" #Typecontrol appAutoFoucsDirectives>
+                                            <mat-option *ngFor="let prod of prodList  let i = index; "
+                                                [value]="prod.Name">
+                                                {{prod.Name }}
+                                            </mat-option>
                                         </mat-select>
                                         <mat-error>
                                             Select Product Type
@@ -33,81 +31,187 @@
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>HSN Code</mat-label>
-                                        <input matInput name="HSNCode" [(ngModel)]="selectedHSNCode" #HSNCodecontrol [disabled]="true">
+                                        <input matInput name="HSNCode" [(ngModel)]="selectedHSNCode" #HSNCodecontrol
+                                            [disabled]="disbleProduct">
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Percentage</mat-label>
-                                        <input matInput name="GSTPercentage" [(ngModel)]="selectedGSTPercentage" #GSTPercentagecontrol [disabled]="true">
+                                        <input matInput name="GSTPercentage" [(ngModel)]="selectedGSTPercentage"
+                                            #GSTPercentagecontrol [disabled]="disbleProduct">
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
-                                    <!-- <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>GST Type</mat-label>
-                                        <input matInput name="GSTType" [(ngModel)]="selectedGSTType" #GSTTypecontrol [disabled]="true">
-                                    </mat-form-field> -->
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Type</mat-label>
-                                        <mat-select name="GSTType" [(ngModel)]="selectedGSTType" [disabled]="true" #GSTTypecontrol>
+                                        <mat-select name="GSTType" [(ngModel)]="selectedGSTType"
+                                            [disabled]="disbleProduct" #GSTTypecontrol>
                                             <mat-option value="None">None</mat-option>
-                                            
+                                            <mat-option value="IGST">IGST</mat-option>
+                                            <mat-option value="CGST-IGST">CGST-IGST</mat-option>
                                         </mat-select>
-
                                     </mat-form-field>
                                 </div>
-
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
-                                    <button mat-mini-fab color="primary" (click)="showAdd = !showAdd;" aria-label="Example icon button with a bookmark icon">
-                        <mat-icon>add</mat-icon></button>
-                                </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
-                                    <button mat-mini-fab color="warn" [disabled]="selectedProduct === ''" aria-label="Example icon button with a bookmark icon">
-                        <mat-icon>delete</mat-icon></button>
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 mb-0">
+                                    <mat-icon class="col-white plus_icon" (click)="showAdd = !showAdd;">add</mat-icon>
+                                    <mat-icon class="delete_icon me-2 ms-2" disabled="selectedProduct === ''"
+                                        (click)="deleteProductType()">delete_forever</mat-icon>
+                                    <mat-icon class="edit_icon" (click)="showAdd = !showAdd; updateedit()">edit
+                                    </mat-icon>
                                 </div>
                             </div>
+
                             <div class="row" *ngIf="showAdd">
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Product Type</mat-label>
-                                        <input matInput name="NewProduct" [(ngModel)]="newProduct.Name" required #NewProductTypecontrol>
+                                        <input matInput name="NewProduct" [(ngModel)]="newProduct.Name" required
+                                            #NewProductTypecontrol>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>HSN Code</mat-label>
-                                        <input matInput name="NewHSNCode" [(ngModel)]="newProduct.HSNCode"  #HSNCodecontrol>
+                                        <input matInput name="NewHSNCode" [(ngModel)]="newProduct.HSNCode"
+                                            #HSNCodecontrol>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Percentage</mat-label>
-                                        <input matInput name="NewGSTPercentage" [(ngModel)]="newProduct.GSTPercentage" #GSTPercentagecontrol>
+                                        <input matInput name="NewGSTPercentage" [(ngModel)]="newProduct.GSTPercentage"
+                                            #GSTPercentagecontrol>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
-                                    <!-- <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>GST Type</mat-label>
-                                        <input matInput name="NewGSTType" [(ngModel)]="newProduct.GSTType" (ngModelChange)="newProduct.GSTType = onChange($event)" #GSTTypecontrol>
-                                    </mat-form-field> -->
-
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Type</mat-label>
-                                        <mat-select name="NewGSTType" [(ngModel)]="newProduct.GSTType"  #GSTTypecontrol>
+                                        <mat-select name="NewGSTType" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol>
                                             <mat-option value="None">None</mat-option>
-                                            
+                                            <mat-option value="IGST">IGST</mat-option>
+                                            <mat-option value="CGST-IGST">CGST-IGST</mat-option>
                                         </mat-select>
-
                                     </mat-form-field>
                                 </div>
-                                
-
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
-                                    <button mat-mini-fab color="primary"  aria-label="Example icon button with a bookmark icon">
-                        <mat-icon>save</mat-icon></button>
+                                    <button *ngIf="hideSave" mat-mini-fab color="primary"
+                                        (click)="showAdd = !showAdd; saveProduct()">
+                                        <mat-icon>save</mat-icon>
+                                    </button>
+                                    <button class="ms-4" mat-mini-fab color="primary"
+                                        (click)="showAdd = !showAdd; updateProductType()">
+                                        <mat-icon>update</mat-icon>
+                                    </button>
                                 </div>
                             </div>
-                          
+
+                            <div class="row">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Name</mat-label>
+                                        <input matInput name="FieldName" [(ngModel)]="newSpec.Name"
+                                            (change)="newSpec.Seq = specList.length+1" required #Namecontrol>
+                                        <mat-error *ngIf="Namecontrol.required">
+                                            Name is required
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Sequence</mat-label>
+                                        <input matInput name="Sequence" [(ngModel)]="newSpec.Seq" required #Seqcontrol>
+                                        <mat-error *ngIf="Seqcontrol.required">
+                                            Seq is required
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Field Type</mat-label>
+                                        <mat-select name="Field Type" [(ngModel)]="newSpec.Type" required #Typecontrol>
+                                            <mat-option [value]=""></mat-option>
+                                            <mat-option *ngFor="let type of fieldType" [value]="type.Name">
+                                                {{type.Name}}
+                                            </mat-option>
+                                        </mat-select>
+                                        <mat-error>
+                                            Select Valid Field Type
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
+                                <div *ngIf="newSpec.Type !== 'text'" class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Dependent On</mat-label>
+                                        <mat-select name="Field Type" [(ngModel)]="newSpec.Ref" #Refcontrol>
+                                            <mat-option [value]="0"></mat-option>
+                                            <mat-option *ngFor="let ref of specList" [value]="ref.Name">
+                                                {{ref.Name}}
+                                            </mat-option>
+                                        </mat-select>
+                                        <mat-error>
+                                            Select Valid Field Type
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
+                                <!-- <div *ngIf="newSpec.Type !== 'text'" class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Support Table</mat-label>
+                                        <input matInput name="ValueList" [(ngModel)]="newSpec.SptTableName"
+                                            #HSNCodecontrol [disabled]="true">
+                                    </mat-form-field>
+                                </div> -->
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 ">
+                                    <mat-slide-toggle name="Multiple" color="primary" [(ngModel)]="newSpec.Required"
+                                        class="example-margin" #Multiplecontrol>Required</mat-slide-toggle>
+                                </div>
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                    <button mat-raised-button color="primary"
+                                        [disabled]="selectedProduct === '' && !f.valid"
+                                        (click)="saveSpec()">Save</button>
+                                </div>
+                            </div>
+
+                            <div class="body" style="overflow-x:auto;overflow:auto;height:420px;"
+                                class="table-responsive">
+                                <table class="table" class="table table-striped table-hover table-sm table-bordered"
+                                    style="border: 2px solid #fff !important;">
+                                    <thead class="thead-light">
+                                        <tr>
+                                            <!-- <th style="text-align: left;">
+                                                <mat-checkbox></mat-checkbox>
+                                            </th> -->
+                                            <th>S.No</th>
+                                            <th>Field Name</th>
+                                            <th>Sequence</th>
+                                            <th>Field Type</th>
+                                            <th>Dependent On</th>
+                                            <th>Support Table Name</th>
+                                            <th>Required</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr class="text-center" *ngFor="let spec of specList ; let i = index;">
+                                            <!-- <td>
+                                                <mat-checkbox></mat-checkbox>
+                                            </td> -->
+                                            <td>{{ i + 1 }}</td>
+                                            <td>{{spec.Name | uppercase}}</td>
+                                            <td>{{spec.Seq}}</td>
+                                            <td>{{spec.Type}}</td>
+                                            <td>{{spec.Ref}}</td>
+                                            <td>{{spec.SptTableName}}</td>
+                                            <td *ngIf="spec.Required === 1">Yes</td>
+                                            <td *ngIf="spec.Required === 0">No</td>
+                                            <td>
+                                                <mat-icon class="delete_icon " (click)="deleteItem(i)">delete_forever
+                                                </mat-icon>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </form>
                     </div>
                 </div>
