--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -12,30 +12,27 @@
     <!-- Navbar items -->
     <div class="nav-links">
       <!-- SuperAdmin nav -->
-      <a *ngIf="user?.data?.UserGroup === 'SuperAdmin'" [routerLink]="['/admin/adminDashborad']">Dashborad1</a>
+      <a *ngIf="user?.data?.UserGroup === 'SuperAdmin'" [routerLink]="['/admin/adminDashborad']">Dashborad</a>
       <div *ngIf="user?.data?.UserGroup === 'SuperAdmin'" class="dropdown">
-        <a class="dropBtn" data-target="#collapseExample">Administration
-          <i class="fa fa-caret-down" aria-hidden="true"></i>
-        </a>
+        <a class="dropBtn" data-target="#collapseExample">Administration <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+
         <div class="drop-content" id="collapseExample">
           <a href="javascript:void(0)" [routerLink]="['/admin/company',0]" id="collapseExample">Company Info</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/companyList']" id="collapseExample">Company List</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/userList']" id="collapseExample">User List</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/loginHistory']" id="collapseExample">Login History</a>
         </div>
-        
-      </div>
+     </div>
+
       <div *ngIf="user?.data?.UserGroup === 'SuperAdmin'" class="dropdown">
-        <a class="dropBtn" data-target="#collapseExample">Product Assign
-          <i class="fa fa-caret-down" aria-hidden="true"></i>
-        </a>
+        <a class="dropBtn" data-target="#collapseExample">Product Assign <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+
         <div class="drop-content" id="collapseExample">
           <a href="javascript:void(0)" [routerLink]="['/product/productManage']" id="collapseExample">Product Manage</a>
           <a href="javascript:void(0)" [routerLink]="['/product/productMaster']" id="collapseExample">Product Master</a>
-      
         </div>
-        
       </div>
+      
       <!-- SuperAdmin end nav-->
 
       <!-- CompanyAdmin nav-->
@@ -56,6 +53,9 @@
         </div>
       </div>
     </div>
+    <a  *ngIf="user?.data?.UserGroup === 'SuperAdmin' " class="logoutBtn" (click)="logout()" title="LogOut">
+      <i class="fa-solid fa-right-from-bracket"></i>
+    </a>
   </div>
 </body>
 <router-outlet></router-outlet>
