--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,11 +1,9 @@
 <router-outlet></router-outlet>
 <ngx-spinner
   bdColor="rgba(0, 0, 0, 0.7)"
-  size = "small"
+  size = "large"
   [fullScreen] = "true"
-  type="ball-scale-multiple"
-  
->
+  type="ball-scale-multiple" >
 <p style="color: white; margin-top:110px" > Please Wait Until your request has not completed... </p>
 </ngx-spinner>
 
