--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -17,11 +17,12 @@
         <a class="dropBtn" data-target="#collapseExample">Administration <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 
         <div class="drop-content" id="collapseExample">
-          <a href="javascript:void(0)" [routerLink]="['/admin/company',0]" id="collapseExample">Company Info</a>
-          <a href="javascript:void(0)" [routerLink]="['/admin/companyList']" id="collapseExample">Company List</a>
-          <a href="javascript:void(0)" [routerLink]="['/admin/userList']" id="collapseExample">User List</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/company',0]"    id="collapseExample">Company Info</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/companyList']"  id="collapseExample">Company List</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/userList']"     id="collapseExample">User List</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/loginHistory']" id="collapseExample">Login History</a>
         </div>
+        
      </div>
 
       <div *ngIf="user?.data?.UserGroup === 'SuperAdmin'" class="dropdown">
@@ -30,7 +31,9 @@
         <div class="drop-content" id="collapseExample">
           <a href="javascript:void(0)" [routerLink]="['/product/productManage']" id="collapseExample">Product Manage</a>
           <a href="javascript:void(0)" [routerLink]="['/product/productMaster']" id="collapseExample">Product Master</a>
+          <a href="javascript:void(0)" [routerLink]="['/product/addManage']"     id="collapseExample">Add Manager</a>
         </div>
+
       </div>
       
       <!-- SuperAdmin end nav-->
@@ -38,19 +41,19 @@
       <!-- CompanyAdmin nav-->
       <a *ngIf="user.data.UserGroup !== 'SuperAdmin'" [routerLink]="['/admin/CompanyDashborad']">Dashborad</a>
       <div *ngIf="user.data.UserGroup !== 'SuperAdmin'" class="dropdown">
-        <a class="dropBtn" data-target="#collapseExample">Administration
-          <i class="fa fa-caret-down" aria-hidden="true"></i>
-        </a>
+        <a class="dropBtn" data-target="#collapseExample">Administration<i class="fa fa-caret-down" aria-hidden="true"></i> </a>
+
         <div class="drop-content" id="collapseExample">
-          <a href="javascript:void(0)" [routerLink]="['/admin/company']" id="collapseExample">Company Info</a>
-          <a href="javascript:void(0)" [routerLink]="['/admin/employeeList']" id="collapseExample">Employee</a>
-          <a href="javascript:void(0)" [routerLink]="['/admin/shopList']" id="collapseExample">Shop</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/company',loggedInUser.CompanyID]" id="collapseExample">Company Info</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/employeeList']"                   id="collapseExample">Employee</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/shopList']"                       id="collapseExample">Shop</a>
           <a href="#">Role-Permission</a>
           <a href="#">Company Setting</a>
           <a href="#">SMS Setting</a>
           <a href="#">Login History</a>
           <a href="#">Recycle-Bin</a>
         </div>
+
       </div>
     </div>
     <a  *ngIf="user?.data?.UserGroup === 'SuperAdmin' " class="logoutBtn" (click)="logout()" title="LogOut">
