--- a/web/src/app/admin/shop-list/shop-list.component.html
+++ b/web/src/app/admin/shop-list/shop-list.component.html
@@ -46,8 +46,8 @@
                           <td class="text-left">{{(data.GSTNo !== 'null')? data.GSTNo: ''}}</td>
                           <td class="text-left">{{(data.CINNo !== 'null')? data.CINNo: ''}}</td>
                           <td class="text-left">{{data.ShopTiming}}</td>
-                          <td class="text-left">{{data.CreatedByUser}}</td>
-                          <td class="text-left">{{data.UpdatedByUser}}</td>
+                          <td class="text-left">{{data.CreatedBy}}</td>
+                          <td class="text-left">{{data.UpdatedBy}}</td>
                         </tr>
                       </tbody>
                     </table>
