--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -48,6 +48,16 @@ $OguruPro-theme: mat.define-light-theme((
 .mat-slide-toggle.mat-primary.mat-checked .mat-slide-toggle-bar {
     background-color: rgba(89, 89, 89, 0.549) !important;
 }
+.btn_icon{
+    background: none;
+    border: none; 
+}
+
+.btn_icon:focus {
+    transition: 0.5s;
+    transform: scale(.9);
+  }
+
 .plus_icon{
     background: #615be7;
     color: #fff;
@@ -68,6 +78,27 @@ $OguruPro-theme: mat.define-light-theme((
     font-size: 23px;
 
 }
+
+.save_icon{
+    background: #3650b4;
+    color: #fff;
+    padding: 3px;
+    border-radius: 24px;
+    font-size: 23px;
+    height: 30px !important;
+    width: 30px !important;
+    cursor: pointer;
+    transition: .5s;
+    box-shadow: 2px 2px 6px #9c9795fa; 
+    font-weight: 900; 
+}
+
+.save_icon:hover{
+    color: #3650b4 !important;
+    background: #ffffff;
+    font-size: 23px;
+}
+
 .delete_icon{
     background: #ff0000;
     color: #fff;
